<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fondoinicio" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="top"
            android:scaleType="centerInside"
            android:src="@drawable/agroemylogocolor" />

        <!-- Botón para acceder en la parte central -->
        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="380dp"
            android:backgroundTint="@color/agro_verde"
            android:backgroundTintMode="@color/agro_verde1"
            android:fontFamily="@font/nunito_bold"
            android:padding="16dp"
            android:text="@string/btnAcceder"
            android:textColor="@color/white"
            android:textColorHighlight="@color/agro_verde1"
            android:textColorHint="@color/agro_verde1"
            android:textColorLink="@color/agro_verde1"
            android:textSize="20sp" />

        <!-- Texto con enlace "No tienes una cuenta? Regístrate" debajo del botón -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txtnotienescuenta"
                android:textColor="@android:color/white"
                android:fontFamily="@font/nunito_bold"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txtRegistrate"
                android:textColor="@color/agro_verde1"
                android:fontFamily="@font/nunito_bold"
                android:textSize="16sp"/>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>